@@ -48,7 +48,7 @@ for all_CF in $Cfiles ; do
 	echo "$tab Updating ..."
 	echo "" >> $all_CF
 #	echo "===============================================================================" >> $all_CF
-	echo "2004-08-03 Jens Tkotz <jens@peino.de> 1.4.5-cvs-b88" >> $all_CF
+	echo "2004-09-01 Jens Tkotz <jens@peino.de> 1.4.5-cvs-b146" >> $all_CF
 	echo "" >> $all_CF
 	echo " * Merge with updated files from 1.4.4" >> $all_CF
 	echo "" >> $all_CF
